# learn-cmake-guide-tutorial

Step1/: CMakeLists.txt  tutorial.cxx
Step2/: CMakeLists.txt  tutorial.cxx
Step2/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
